JVKP/src/objects/Student_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Available_colleges__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>college</label>
        <referenceTo>college1__c</referenceTo>
        <relationshipLabel>Student_Registrations</relationshipLabel>
        <relationshipName>Student_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <externalId>true</externalId>
        <label>Branch</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prefered_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>prefered branch</label>
        <referenceTo>branch__c</referenceTo>
        <relationshipLabel>Student_Registrations</relationshipLabel>
        <relationshipName>Student_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <label>Student Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Student Registration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Student Registration number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>